# berkeley-softfloat-3

./: CMakeLists.txt
source/: CMakeLists.txt  internals.h  internals.hpp
source/models/RISCV/: CMakeLists.txt  model.hpp
source/models/x86/: CMakeLists.txt  Intel8086.hpp  s_propagateNaNExtF80UI.cpp
source/others/: CMakeLists.txt  extF80M_add.c  extF80M_add.cpp  extF80M_div.c  extF80M_div.cpp  extF80M_eq.c  extF80M_eq.cpp  extF80M_eq_signaling.c  extF80M_eq_signaling.cpp  extF80M_isSignalingNaN.cpp  extF80M_le.c  extF80M_le.cpp  extF80M_le_quiet.c  extF80M_le_quiet.cpp  extF80M_lt.c  extF80M_lt.cpp  extF80M_lt_quiet.c  extF80M_lt_quiet.cpp  extF80M_mul.c  extF80M_mul.cpp  extF80M_rem.c  extF80M_rem.cpp  extF80M_roundToInt.c  extF80M_roundToInt.cpp  extF80M_sqrt.c  extF80M_sqrt.cpp  extF80M_sub.c  extF80M_sub.cpp  extF80M_to_f128M.c  extF80M_to_f128M.cpp  extF80M_to_f16.c  extF80M_to_f16.cpp  extF80M_to_f32.c  extF80M_to_f32.cpp  extF80M_to_f64.c  extF80M_to_f64.cpp  extF80M_to_i32.c  extF80M_to_i32.cpp  extF80M_to_i32_r_minMag.c  extF80M_to_i32_r_minMag.cpp  (+360 more)
source/others/FAST_INT64/: CMakeLists.txt  extF80M_add.cpp  extF80M_div.cpp  extF80M_eq.cpp  extF80M_eq_signaling.cpp  extF80M_le.cpp  extF80M_le_quiet.cpp  extF80M_lt.cpp  extF80M_lt_quiet.cpp  extF80M_mul.cpp  extF80M_rem.cpp  extF80M_roundToInt.cpp  extF80M_sqrt.cpp  extF80M_sub.cpp  extF80M_to_f128M.cpp  extF80M_to_f16.cpp  extF80M_to_f32.cpp  extF80M_to_f64.cpp  extF80M_to_i32.cpp  extF80M_to_i32_r_minMag.cpp  extF80M_to_i64.cpp  extF80M_to_i64_r_minMag.cpp  extF80M_to_ui32.cpp  extF80M_to_ui32_r_minMag.cpp  extF80M_to_ui64.cpp  extF80M_to_ui64_r_minMag.cpp  extF80_add.c  extF80_add.cpp  extF80_div.c  extF80_div.cpp  extF80_eq.c  extF80_eq.cpp  extF80_eq_signaling.c  extF80_eq_signaling.cpp  extF80_isSignalingNaN.c  extF80_isSignalingNaN.cpp  extF80_le.c  extF80_le.cpp  extF80_le_quiet.c  extF80_le_quiet.cpp  (+195 more)
source/others/NON_FAST_INT64/: CMakeLists.txt  extF80M_add.cpp  extF80M_div.cpp  extF80M_eq.cpp  extF80M_eq_signaling.cpp  extF80M_le.cpp  extF80M_le_quiet.cpp  extF80M_lt.cpp  extF80M_lt_quiet.cpp  extF80M_mul.cpp  extF80M_rem.cpp  extF80M_roundToInt.cpp  extF80M_sqrt.cpp  extF80M_sub.cpp  extF80M_to_f128M.cpp  extF80M_to_f16.cpp  extF80M_to_f32.cpp  extF80M_to_f64.cpp  extF80M_to_i32.cpp  extF80M_to_i32_r_minMag.cpp  extF80M_to_i64.cpp  extF80M_to_i64_r_minMag.cpp  extF80M_to_ui32.cpp  extF80M_to_ui32_r_minMag.cpp  extF80M_to_ui64.cpp  extF80M_to_ui64_r_minMag.cpp  f128M_add.cpp  f128M_div.cpp  f128M_eq.cpp  f128M_eq_signaling.cpp  f128M_le.cpp  f128M_le_quiet.cpp  f128M_lt.cpp  f128M_lt_quiet.cpp  f128M_mul.cpp  f128M_mulAdd.cpp  f128M_rem.cpp  f128M_roundToInt.cpp  f128M_sqrt.cpp  f128M_sub.cpp  (+71 more)
source/primitives/: CMakeLists.txt  functions.h  functions.hpp  s_approxRecip32_1.c  s_approxRecip32_1.cpp  s_approxRecipSqrt32_1.c  s_approxRecipSqrt32_1.cpp  s_approxRecipSqrt_1Ks.c  s_approxRecipSqrt_1Ks.cpp  s_approxRecip_1Ks.c  s_approxRecip_1Ks.cpp  s_compare128M.cpp  s_countLeadingZeros16.c  s_countLeadingZeros16.cpp  s_countLeadingZeros32.c  s_countLeadingZeros32.cpp  s_countLeadingZeros64.c  s_countLeadingZeros64.cpp  s_countLeadingZeros8.c  s_countLeadingZeros8.cpp  s_eq128.c  s_eq128.cpp  s_le128.c  s_le128.cpp  s_lt128.c  s_lt128.cpp  s_negXM.cpp  s_shiftRightJam32.c  s_shiftRightJam32.cpp  s_shiftRightJam64.c  s_shiftRightJam64.cpp  s_shortShiftLeft64To96M.c  s_shortShiftLeft64To96M.cpp  s_shortShiftRightJam64.c  s_shortShiftRightJam64.cpp  s_sub128.c  s_sub128.cpp  s_sub1XM.cpp  s_sub256M.cpp  s_subM.cpp  (+2 more)
source/primitives/FAST_INT64/: CMakeLists.txt  s_add128.c  s_add128.cpp  s_add256M.c  s_add256M.cpp  s_mul128By32.c  s_mul128By32.cpp  s_mul128To256M.c  s_mul128To256M.cpp  s_mul64ByShifted32To128.c  s_mul64ByShifted32To128.cpp  s_mul64To128.c  s_mul64To128.cpp  s_shiftRightJam128.c  s_shiftRightJam128.cpp  s_shiftRightJam128Extra.c  s_shiftRightJam128Extra.cpp  s_shiftRightJam256M.c  s_shiftRightJam256M.cpp  s_shiftRightJam64Extra.c  s_shiftRightJam64Extra.cpp  s_shortShiftLeft128.c  s_shortShiftLeft128.cpp  s_shortShiftRight128.c  s_shortShiftRight128.cpp  s_shortShiftRightJam128.c  s_shortShiftRightJam128.cpp  s_shortShiftRightJam128Extra.c  s_shortShiftRightJam128Extra.cpp  s_shortShiftRightJam64Extra.c  s_shortShiftRightJam64Extra.cpp  s_sub256M.c  s_sub256M.cpp
source/primitives/NON_FAST_INT64/: CMakeLists.txt  s_addCarryM.c  s_addCarryM.cpp  s_addComplCarryM.c  s_addComplCarryM.cpp  s_addM.c  s_addM.cpp  s_compare128M.c  s_compare128M.cpp  s_compare96M.c  s_compare96M.cpp  s_mul128MTo256M.c  s_mul128MTo256M.cpp  s_mul64To128M.c  s_mul64To128M.cpp  s_negXM.c  s_negXM.cpp  s_remStepMBy32.c  s_remStepMBy32.cpp  s_shiftLeftM.c  s_shiftLeftM.cpp  s_shiftRightJamM.c  (+13 more)
source/private/: CMakeLists.txt  internals.hpp  s_addMagsF16.cpp  s_approxRecipSqrt32_1.cpp  s_approxRecipSqrt_1Ks.cpp  s_approxRecip_1Ks.cpp  s_countLeadingZeros8.cpp  s_normRoundPackToF16.cpp  s_roundPackToF16.cpp  s_roundPackToF32.cpp  s_roundPackToF64.cpp  s_roundPackToI32.cpp  s_roundPackToUI32.cpp  s_subMagsF16.cpp  softfloat_state.cpp
source/public/: CMakeLists.txt  extF80M_add.cpp  extF80M_div.cpp  extF80M_eq.cpp  extF80M_eq_signaling.cpp  extF80M_le.cpp  extF80M_le_quiet.cpp  extF80M_lt.cpp  extF80M_lt_quiet.cpp  extF80M_mul.cpp  extF80M_rem.cpp  extF80M_roundToInt.cpp  extF80M_sqrt.cpp  extF80M_sub.cpp  extF80M_to_f128M.cpp  extF80M_to_f16.cpp  extF80M_to_f32.cpp  extF80M_to_f64.cpp  extF80M_to_i32.cpp  extF80M_to_i32_r_minMag.cpp  extF80M_to_i64.cpp  extF80M_to_i64_r_minMag.cpp  extF80M_to_ui32.cpp  extF80M_to_ui32_r_minMag.cpp  extF80M_to_ui64.cpp  extF80M_to_ui64_r_minMag.cpp  extF80_add.cpp  extF80_add_sub.cpp  extF80_div.cpp  extF80_le.cpp  extF80_le_quiet.cpp  extF80_lt.cpp  extF80_lt_quiet.cpp  extF80_mul.cpp  extF80_rem.cpp  extF80_roundToInt.cpp  extF80_sqrt.cpp  extF80_sub.cpp  extF80_to_f128.cpp  extF80_to_f16.cpp  (+168 more)
source/specialize/: CMakeLists.txt  extF80M_isSignalingNaN.c  extF80M_isSignalingNaN.cpp  f128M_isSignalingNaN.c  f128M_isSignalingNaN.cpp  softfloat_raiseFlags.c
source/targets/: CMakeLists.txt
(+201 files in other folders)
