cmake_minimum_required(VERSION 3.0)

add_subdirectory(FAST_INT64)
add_subdirectory(NON_FAST_INT64)

set(SRC_OTHERS
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_eq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_eq_signaling.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_le.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_le_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_lt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_lt_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_rem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_roundToInt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_eq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_eq_signaling.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_le.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_le_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_lt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_lt_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_mulAdd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_rem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_roundToInt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_extF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_eq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_eq_signaling.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_isSignalingNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_le.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_le_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_lt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_lt_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_mulAdd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_rem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_roundToInt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_extF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_eq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_eq_signaling.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_isSignalingNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_le.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_le_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_lt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_lt_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_mulAdd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_rem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_roundToInt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_extF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_add.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_div.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_eq.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_eq_signaling.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_isSignalingNaN.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_le.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_le_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_lt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_lt_quiet.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_mul.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_mulAdd.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_rem.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_roundToInt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_sqrt.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_sub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui32_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui64_r_minMag.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_extF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_mulAddF16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_mulAddF32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normSubnormalF16Sig.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normSubnormalF32Sig.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normSubnormalF64Sig.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToI32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToUI32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/softfloat_state.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_extF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f64.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_extF80M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f128M.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f16.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f32.c
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f64.c
PARENT_SCOPE)

set(SRC_OTHERS_FAST_INT64 
    ${SRC_OTHERS_FAST_INT64}
PARENT_SCOPE)

set(SRC_OTHERS_NON_FAST_INT64
    ${SRC_OTHERS_NON_FAST_INT64}
PARENT_SCOPE)
