cmake_minimum_required(VERSION 3.0)

add_subdirectory(FAST_INT64)
add_subdirectory(NON_FAST_INT64)

set(SRC_OTHERS
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_add.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_div.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_eq.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_eq_signaling.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_isSignalingNaN.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_le.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_le_quiet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_lt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_lt_quiet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_mul.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_mulAdd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_rem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_roundToInt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_sqrt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_sub.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i32_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i64_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui32_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui64_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_add.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_eq.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_eq_signaling.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_isSignalingNaN.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_le.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_le_quiet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_lt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_lt_quiet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_mul.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_mulAdd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_rem.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_roundToInt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_sqrt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_sub.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i32_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i64_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui32_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui64_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_add.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_div.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_eq.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_eq_signaling.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_isSignalingNaN.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_le.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_le_quiet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_lt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_lt_quiet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_mulAdd.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_roundToInt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_sqrt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_sub.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i32_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i64_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui32_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui64_r_minMag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_mulAddF16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_mulAddF32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normSubnormalF16Sig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normSubnormalF32Sig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_normSubnormalF64Sig.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToI32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToUI32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/softfloat_state.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f64.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f16.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f32.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f64.cpp
PARENT_SCOPE)

set(SRC_OTHERS_FAST_INT64 
    ${SRC_OTHERS_FAST_INT64}
PARENT_SCOPE)

set(SRC_OTHERS_NON_FAST_INT64
    ${SRC_OTHERS_NON_FAST_INT64}
PARENT_SCOPE)
