cmake_minimum_required(VERSION 3.0)

add_library(softfloat_others INTERFACE)
target_link_libraries(softfloat_others INTERFACE softfloat_primitives)
target_sources(softfloat_others
INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_lt_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_le_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_eq_signaling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_lt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_le.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_eq.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_sqrt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_rem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_div.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_mul.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_roundToInt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_i32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_to_ui32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_lt_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_le_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_eq_signaling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_lt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_le.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_eq.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_sqrt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_rem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_div.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_mul.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_roundToInt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_i32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/extF80M_to_ui32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i64_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i32_to_extF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f128M_isSignalingNaN.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_add.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_div.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_eq.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_eq_signaling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_isSignalingNaN.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_le.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_le_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_lt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_lt_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_mul.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_mulAdd.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_rem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_roundToInt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_sqrt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_sub.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_i64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f16_to_ui64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_add_sub.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_eq.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_eq_signaling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_isSignalingNaN.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_le.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_le_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_lt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_lt_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_mul.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_mulAdd.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_rem.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_roundToInt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_sqrt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_i64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f32_to_ui64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_add_sub.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_div.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_eq.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_eq_signaling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_isSignalingNaN.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_le.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_le_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_lt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_lt_quiet.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_roundToInt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_sqrt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_i64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui32_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/f64_to_ui64_r_minMag.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i32_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/i64_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_addMagsF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToI32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToUI32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_subMagsF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/softfloat_flags.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/softfloat_rounding_mode.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/softfloat_state.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui32_to_f64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ui64_to_f64.cpp
)

if(SOFTFLOAT_FAST_INT64)
	add_subdirectory(FAST_INT64)
else()
	add_subdirectory(NON_FAST_INT64)
endif(SOFTFLOAT_FAST_INT64)
