cmake_minimum_required(VERSION 3.0)

add_library(softfloat_private INTERFACE)
target_sources(softfloat_private INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/internals.hpp)
target_include_directories(softfloat_private INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(softfloat_private INTERFACE softfloat_build)
target_sources(softfloat_private
INTERFACE
	${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_addMagsExtF80.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_mul128To256M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_mul64To128.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_mulAddF128.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_normRoundPackToExtF80.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_normRoundPackToF128.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_normSubnormalF128Sig.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_roundPackToExtF80.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_roundPackToF128.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_roundPackToI64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_roundPackToUI64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_shiftRightJam128.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_shiftRightJam128Extra.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_sub256M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fast_int64/s_subMagsExtF80.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/internals.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/primitives/functions.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/primitives/types.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_approxRecipSqrt32_1.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_approxRecipSqrt_1Ks.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_approxRecip_1Ks.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_countLeadingZeros8.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_normRoundPackToF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF16.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToF64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToI32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/s_roundPackToUI32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_addCarryM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_addComplCarryM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_addExtF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_addM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_compare128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_compare96M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_compareNonnormExtF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_invalidExtF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_invalidF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_isNaNF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_mul128MTo256M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_mul64To128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_mulAddF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_negXM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_normExtF80SigM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_normRoundPackMToExtF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_normRoundPackMToF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_remStepMBy32.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_roundPackMToExtF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_roundPackMToF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_roundPackMToI64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_roundPackMToUI64.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shiftLeftM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shiftNormSigF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shiftRightJamM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shiftRightM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shortShiftLeftM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shortShiftRightJamM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_shortShiftRightM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_sub1XM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_subM.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_tryPropagateNaNExtF80M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/slow_int64/s_tryPropagateNaNF128M.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/softfloat_state.cpp
)
